--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,7 @@
   "builds": [
       {
           "src": "app.py",
-          "use": "@vercel/python",
-          "config": {
-              "runtime": "python3.9"
-          }
+          "use": "@vercel/python"
       }
   ],
   "routes": [
@@ -14,5 +11,13 @@
           "src": "/(.*)",
           "dest": "app.py"
       }
-  ]
+  ],
+  "build": {
+      "env": {
+          "PLAYWRIGHT_BROWSERS_PATH": "0"
+      },
+      "scripts": {
+          "postinstall": "playwright install chromium"
+      }
+  }
 }
