--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: flask-app
     env: python
-    buildCommand: "pip install -r requirements.txt && playwright install"
+    buildCommand: "pip install -r requirements.txt && playwright install chromium"
     startCommand: "python app.py"
     envVars:
       - key: PLAYWRIGHT_BROWSERS_PATH
-        value: 0
+        value: "0"
